--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "sass": "^1.77.8",
+    "sass-loader": "^14.2.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
     "vuex": "^4.0.2"
