--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "sass-loader": "^14.2.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
